# smartThreads

./: .gitignore  README.md  pyproject.toml
src/smartthreads/: __init__.py  cli.py  config.py  costs.py  harness.py
src/smartthreads/providers/: __init__.py  base.py  images.py  ollama.py  openai_compatible.py
src/smartthreads/web/: __init__.py  server.py
src/smartthreads/web/static/: app.js  index.html  style.css
tests/: test_cli.py  test_config.py  test_costs.py  test_harness.py  test_internet_urls.py  test_providers.py  test_web_server.py
