[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartthreads"
version = "0.1.0"
description = "Python AI harness for toggling between local and internet LLMs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anthony David" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
smartthreads = "smartthreads.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
